attempt fix on section ul alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ nav {
     background-color: var(--bg-color);
     color: black;
     text-align: center;
-    display: flex;
-    align-items: center;
+    /*display: flex;
+    align-items: center;*/
     margin: 10px 0 10px 0;
     max-width: 600px;
     border: 2.5px solid green;
@@ -140,7 +140,10 @@ li {
     padding: 2.5px 7.5px;
     margin: 0 0 20px 0;
     width: 60%;
-    justify-items: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section ul {
@@ -300,7 +303,7 @@ td {
 
     .section {
         width: 90%;
-        background-color: red;
+        background-color: blue;
     }
 }
 
